--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,8 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["next/core-web-vitals", "@next/eslint-plugin-next"],
+  "plugins": ["@stylistic/js"],
+  "rules": {
+    "@stylistic/js/indent": ["error", 2]
+  }
+
 }
