--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@types/react-syntax-highlighter": "^15.5.10",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3",
+    "eslint-config-next": "^14.0.4",
     "gray-matter": "^4.0.3",
     "next-mdx-remote": "^4.4.1",
     "postcss": "^8",
